feat: components develop

--- a/src/views/discover/style/index.scss
+++ b/src/views/discover/style/index.scss
@@ -1,6 +1,7 @@
 .discover {
     width: 100%;
     // position: relative;
+    height: 100%;
     display: flex;
     justify-content: center;
     box-sizing: border-box;
