init: add rep to pro

--- a/src/components/Card/style/title.scss
+++ b/src/components/Card/style/title.scss
@@ -9,6 +9,8 @@
         display: flex;
         .text-title {
             display: flex;
+            flex-grow: 1;
+            flex-wrap: nowrap;
         }
     }
 }
